fix: cancel database work on query timeout